update catboost scaled

--- a/darts_catboost.ipynb
+++ b/darts_catboost.ipynb
@@ -23,9 +23,21 @@
     "from darts import TimeSeries\n",
     "from darts.models import CatBoostModel\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "import kaggle_metric\n",
     "import utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e177717",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_state = 42\n",
+    "np.random.seed(random_state)"
    ]
   },
   {
@@ -35,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = utils.create_df('./data/kernel/receivals.csv')\n",
+    "df = utils.create_df(\"./data/kernel/receivals.csv\")\n",
     "df.head()"
    ]
   },
@@ -46,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "series_lst = TimeSeries.from_group_dataframe(df, 'rm_id', 'date_arrival','net_weight')"
+    "series_lst = TimeSeries.from_group_dataframe(df, \"rm_id\", \"date_arrival\", \"net_weight\")"
    ]
   },
   {
@@ -61,8 +73,12 @@
     "val_dict = {}\n",
     "for i in range(len(series_lst)):\n",
     "    train_i, val_i = series_lst[i].split_after(0.8)\n",
-    "    \n",
-    "    rm_id = series_lst[i].static_covariates[\"rm_id\"] if \"rm_id\" in series_lst[i].static_covariates else None\n",
+    "\n",
+    "    rm_id = (\n",
+    "        series_lst[i].static_covariates[\"rm_id\"]\n",
+    "        if \"rm_id\" in series_lst[i].static_covariates\n",
+    "        else None\n",
+    "    )\n",
     "    series_dict[rm_id.values[0]] = series_lst[i]\n",
     "    train_dict[rm_id.values[0]] = train_i\n",
     "    val_dict[rm_id.values[0]] = val_i"
@@ -82,7 +98,9 @@
     "for key in train_dict:\n",
     "    print(f\"Training model for rm_id: {key}\")\n",
     "    train_values = train_dict[key].values()\n",
-    "    model = CatBoostModel(lags=30, use_static_covariates=False, random_state=42)\n",
+    "    model = CatBoostModel(\n",
+    "        lags=30, use_static_covariates=False, random_state=random_state\n",
+    "    )\n",
     "    try:\n",
     "        model.fit(train_dict[key])\n",
     "        model_dict[key] = model\n",
@@ -92,25 +110,30 @@
     "        actual_steps[actual_steps < 100] = 0\n",
     "\n",
     "        # Store predictions and actual values in a dataframe\n",
-    "        df_eval = pd.DataFrame({\n",
-    "            'predicted_weight': actual_steps.flatten(),\n",
-    "            'weight': val_dict[key].cumsum().values().flatten()\n",
-    "        })\n",
+    "        df_eval = pd.DataFrame(\n",
+    "            {\n",
+    "                \"predicted_weight\": actual_steps.flatten(),\n",
+    "                \"weight\": val_dict[key].cumsum().values().flatten(),\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "    except Exception as e:\n",
-    "        df_eval = pd.DataFrame({\n",
-    "            'predicted_weight': [0]*len(val_dict[key]),\n",
-    "            'weight': val_dict[key].cumsum().values().flatten()\n",
-    "        })\n",
+    "        df_eval = pd.DataFrame(\n",
+    "            {\n",
+    "                \"predicted_weight\": [0] * len(val_dict[key]),\n",
+    "                \"weight\": val_dict[key].cumsum().values().flatten(),\n",
+    "            }\n",
+    "        )\n",
     "        print(f\"Error training model for rm_id {key}: {e}\")\n",
     "\n",
     "    lst.append(df_eval)\n",
     "\n",
     "df_eval = pd.concat(lst).reset_index(drop=True)\n",
-    "df_eval['ID'] = df_eval.index\n",
-    "score = kaggle_metric.score(df_eval[['ID', 'weight']], df_eval[['ID', 'predicted_weight']])\n",
-    "print(f\"Validation score: {score}\")\n",
-    "    \n"
+    "df_eval[\"ID\"] = df_eval.index\n",
+    "score = kaggle_metric.score(\n",
+    "    df_eval[[\"ID\", \"weight\"]], df_eval[[\"ID\", \"predicted_weight\"]]\n",
+    ")\n",
+    "print(f\"Validation score: {score}\")"
    ]
   },
   {
@@ -120,8 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ax = df_eval.plot(y='weight', label='Actual')\n",
-    "df_eval.plot(y='predicted_weight', ax=ax, label='Predicted', alpha=0.5)"
+    "ax = df_eval.plot(y=\"weight\", label=\"Actual\")\n",
+    "df_eval.plot(y=\"predicted_weight\", ax=ax, label=\"Predicted\", alpha=0.5)"
    ]
   },
   {
@@ -131,28 +154,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prediction_mapping = pd.read_csv('./data/prediction_mapping.csv')\n",
-    "prediction_mapping['forecast_start_date'] = pd.to_datetime(prediction_mapping['forecast_start_date'], utc=True).dt.tz_localize(None).dt.normalize()\n",
-    "prediction_mapping['forecast_end_date'] = pd.to_datetime(prediction_mapping['forecast_end_date'], utc=True).dt.tz_localize(None).dt.normalize()\n",
-    "prediction_mapping = prediction_mapping.sort_values(['rm_id', 'forecast_end_date'])\n",
-    "max_date = pd.Timestamp('2025-05-31')\n",
+    "prediction_mapping = pd.read_csv(\"./data/prediction_mapping.csv\")\n",
+    "prediction_mapping[\"forecast_start_date\"] = (\n",
+    "    pd.to_datetime(prediction_mapping[\"forecast_start_date\"], utc=True)\n",
+    "    .dt.tz_localize(None)\n",
+    "    .dt.normalize()\n",
+    ")\n",
+    "prediction_mapping[\"forecast_end_date\"] = (\n",
+    "    pd.to_datetime(prediction_mapping[\"forecast_end_date\"], utc=True)\n",
+    "    .dt.tz_localize(None)\n",
+    "    .dt.normalize()\n",
+    ")\n",
+    "prediction_mapping = prediction_mapping.sort_values([\"rm_id\", \"forecast_end_date\"])\n",
+    "max_date = pd.Timestamp(\"2025-05-31\")\n",
     "lst = []\n",
-    "for rm_id, group in prediction_mapping.groupby('rm_id'):\n",
+    "for rm_id, group in prediction_mapping.groupby(\"rm_id\"):\n",
     "    print(f\"Processing rm_id {rm_id}\")\n",
     "    if rm_id not in model_dict:\n",
     "        print(f\"No model for rm_id {rm_id}, setting predicted_weight to 0\")\n",
-    "        group['predicted_weight'] = 0\n",
+    "        group[\"predicted_weight\"] = 0\n",
     "    else:\n",
-    "    \n",
+    "\n",
     "        last_train = series_dict[rm_id].time_index[-1]\n",
     "        n_steps = (max_date - last_train).days - 1\n",
-    "        print(f\"Predicting {n_steps} steps for rm_id {rm_id} because last known date is {last_train}\")\n",
+    "        print(\n",
+    "            f\"Predicting {n_steps} steps for rm_id {rm_id} because last known date is {last_train}\"\n",
+    "        )\n",
     "        preds = model_dict[rm_id].predict(n_steps, series=series_dict[rm_id])\n",
     "        actual_steps = preds.values().clip(min=0)\n",
     "        actual_steps = actual_steps.cumsum()\n",
     "        # group['predicted_weight'] = actual_steps\n",
     "        actual_steps[actual_steps < 100] = 0\n",
-    "        group['predicted_weight'] = actual_steps\n",
+    "        group[\"predicted_weight\"] = actual_steps\n",
     "    lst.append(group)\n",
     "\n",
     "df_final = pd.concat(lst)"
@@ -166,12 +199,12 @@
    "outputs": [],
    "source": [
     "timestamp = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "submission_path = f'./data/submission/submission_{timestamp}.csv'\n",
-    "if not os.path.exists('./data/submission/'):\n",
-    "    os.makedirs('./data/submission/')\n",
-    "    \n",
+    "submission_path = f\"./data/submission/submission_{timestamp}.csv\"\n",
+    "if not os.path.exists(\"./data/submission/\"):\n",
+    "    os.makedirs(\"./data/submission/\")\n",
     "\n",
-    "df_final[['ID', 'predicted_weight']].to_csv(submission_path, index=False)"
+    "\n",
+    "df_final[[\"ID\", \"predicted_weight\"]].to_csv(submission_path, index=False)"
    ]
   }
  ],
