--- a/darts_catboost_scaled.ipynb
+++ b/darts_catboost_scaled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "467b192e",
    "metadata": {},
    "outputs": [
@@ -124,10 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "20dfa585",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "The StatsForecast module could not be imported. To enable support for the AutoARIMA, AutoETS and Croston models, please consider installing it.\n",
+      "The `XGBoost` module could not be imported. To enable XGBoost support in Darts, follow the detailed instructions in the installation guide: https://github.com/unit8co/darts/blob/master/INSTALL.md\n",
+      "The `XGBoost` module could not be imported. To enable XGBoost support in Darts, follow the detailed instructions in the installation guide: https://github.com/unit8co/darts/blob/master/INSTALL.md\n"
+     ]
+    }
+   ],
    "source": [
     "from datetime import datetime\n",
     "from darts import TimeSeries\n",
@@ -144,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dabfea79",
    "metadata": {},
    "outputs": [],
@@ -155,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "8571ae9a",
    "metadata": {},
    "outputs": [
@@ -184,7 +194,7 @@
          "type": "float"
         }
        ],
-       "ref": "cc44cb92-787a-45ba-8674-d2229e7a7a90",
+       "ref": "a6f29418-2a77-4b07-a346-b7f0abb050e2",
        "rows": [
         [
          "6045",
@@ -290,7 +300,7 @@
        "6049   2021-01-06    342         0.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "80d1da27",
    "metadata": {},
    "outputs": [],
