Remove material and transport information from model

--- a/RF_per_id_loop.ipynb
+++ b/RF_per_id_loop.ipynb
@@ -8,8 +8,7 @@
     "Model 2 : RandomForest\n",
     "- Lags\n",
     "- date features\n",
-    "- material information\n",
-    "- transport information"
+    "- One model for each rm_id"
    ]
   },
   {
